[package]
name = "axum-solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.7.5"
lambda_http = "0.11.1"
lambda_runtime = "0.11.1"
httpc-test = "0.1.9"
serde_json = "1.0.116"
serde = "1.0.198"
tokio = { version = "1.37.0", features = ["macros"] }
openssl = { version = "0.10", features = ["vendored"] }
