[package]
name = "axum-solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.7.5"
lambda_http = "0.11.1"
lambda_runtime = "0.11.1"
httpc-test = "0.1.9"
serde_json = "1.0.116"
serde = "1.0.198"
tokio = { version = "1.37.0", features = ["macros"] }
openssl = { version = "0.10", features = ["vendored"] }
anyhow = "1.0.75"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
regex = "1.10.2"
tracing = "0.1.40"
thiserror = "1.0.51"

# anchor-syn = { version = "0.29.0", features = [
#     "allow-missing-optionals",
#     "event-cpi",
#     "idl-parse",
#     "init-if-needed",
# ] }

anchor-lang-idl = { version = "0.1.0", features = ["build"] }
